Add: Timer-Funktion mit Toggle, Schieberegler (5-120s) und visuellen Warnungen

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
                     <span class="score-label">Punkte:</span>
                     <span class="score-value" id="scoreValue">0</span>
                 </div>
+                <div class="timer-display" id="timerDisplay" style="display: none;">
+                    <i class="fas fa-clock"></i>
+                    <span class="timer-value" id="timerValue">30</span>
+                </div>
                 <button class="restart-btn" id="restartBtn" title="Neustart">
                     <i class="fas fa-rotate-right"></i>
                 </button>
