--- a/index.html
+++ b/index.html
@@ -47,56 +47,173 @@
     <main class="container">
         <!-- Start Screen -->
         <div id="startScreen" class="screen active">
-            <div class="card welcome-card">
-                <h2>Willkommen zum Österreich-Quiz!</h2>
-                <p>Teste dein Wissen über Österreich. Wähle ein Spiel und einen Schwierigkeitsgrad.</p>
+            <!-- Hero Section -->
+            <div class="hero-section">
+                <div class="hero-content">
+                    <div class="hero-flag">🇦🇹</div>
+                    <h1 class="hero-title">Österreich Quiz</h1>
+                    <p class="hero-subtitle">Teste dein Wissen über die Alpenrepublik</p>
+                    <div class="hero-stats">
+                        <div class="stat-item">
+                            <i class="fas fa-trophy"></i>
+                            <span><strong id="heroTotalPoints">0</strong> Punkte</span>
+                        </div>
+                        <div class="stat-item">
+                            <i class="fas fa-gamepad"></i>
+                            <span><strong id="heroTotalGames">0</strong> Spiele</span>
+                        </div>
+                        <div class="stat-item">
+                            <i class="fas fa-chart-line"></i>
+                            <span><strong id="heroWinRate">0%</strong> Erfolgsrate</span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <!-- Game Selection -->
-            <div class="selection-section" id="gameSelectionSection">
-                <h3>Wähle ein Spiel:</h3>
-                <div class="button-grid">
-                    <button class="game-btn" data-game="license-plates">
-                        <i class="fas fa-car"></i>
-                        <span>Kennzeichen raten</span>
-                    </button>
-                    <button class="game-btn" data-game="capitals">
-                        <i class="fas fa-university"></i>
-                        <span>Hauptstädte quizzen</span>
-                    </button>
-                    <button class="game-btn" data-game="world-capitals">
-                        <i class="fas fa-globe"></i>
-                        <span>Internationale Hauptstädte</span>
-                    </button>
-                    <button class="game-btn" data-game="population">
-                        <i class="fas fa-users"></i>
-                        <span>Einwohner vergleichen</span>
-                    </button>
+            <!-- Main Games Section -->
+            <div class="games-section">
+                <h2 class="section-title">
+                    <i class="fas fa-map-location-dot"></i>
+                    Hauptspiele
+                </h2>
+                <div class="games-grid">
+                    <!-- KFZ-Kennzeichen -->
+                    <div class="game-card featured" data-game="license-plates">
+                        <div class="game-card-badge">Beliebt</div>
+                        <div class="game-card-icon">
+                            <i class="fas fa-car"></i>
+                        </div>
+                        <h3 class="game-card-title">KFZ-Kennzeichen</h3>
+                        <p class="game-card-description">Erkenne alle 93 österreichischen Kennzeichen der Bundesländer und Bezirke</p>
+                        <div class="game-card-stats">
+                            <span><i class="fas fa-map-marker-alt"></i> 93 Kennzeichen</span>
+                            <span><i class="fas fa-layer-group"></i> 3 Modi</span>
+                        </div>
+                        <button class="game-card-btn" data-game="license-plates">
+                            <i class="fas fa-play"></i> Spielen
+                        </button>
+                    </div>
+
+                    <!-- Hauptstädte Österreich -->
+                    <div class="game-card featured" data-game="capitals">
+                        <div class="game-card-badge">Neu</div>
+                        <div class="game-card-icon">
+                            <i class="fas fa-university"></i>
+                        </div>
+                        <h3 class="game-card-title">Hauptstädte Österreich</h3>
+                        <p class="game-card-description">Teste dein Wissen über Landes- und Bezirkshauptstädte in ganz Österreich</p>
+                        <div class="game-card-stats">
+                            <span><i class="fas fa-city"></i> 9 Bundesländer</span>
+                            <span><i class="fas fa-shield-alt"></i> Mit Wappen</span>
+                        </div>
+                        <button class="game-card-btn" data-game="capitals">
+                            <i class="fas fa-play"></i> Spielen
+                        </button>
+                    </div>
+
+                    <!-- Wappen-Sammlung Teaser -->
+                    <div class="game-card info-card">
+                        <div class="game-card-icon secondary">
+                            <i class="fas fa-flag"></i>
+                        </div>
+                        <h3 class="game-card-title">Wappen-Sammlung</h3>
+                        <p class="game-card-description">Entdecke 54 österreichische Wappen von Bundesländern, Städten und Bezirken</p>
+                        <a href="wappen.html" class="game-card-btn secondary">
+                            <i class="fas fa-arrow-right"></i> Zur Sammlung
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bonus Section -->
+            <div class="bonus-section">
+                <h2 class="section-title">
+                    <i class="fas fa-globe"></i>
+                    Bonus: Welt-Quiz
+                </h2>
+                <div class="games-grid single">
+                    <div class="game-card bonus-card" data-game="world-capitals">
+                        <div class="game-card-badge bonus">Bonus</div>
+                        <div class="game-card-icon bonus">
+                            <i class="fas fa-earth-americas"></i>
+                        </div>
+                        <h3 class="game-card-title">Internationale Hauptstädte</h3>
+                        <p class="game-card-description">Erweitere deinen Horizont mit über 150 Hauptstädten aus aller Welt</p>
+                        <div class="game-card-stats">
+                            <span><i class="fas fa-globe-americas"></i> 150+ Städte</span>
+                            <span><i class="fas fa-language"></i> Mehrsprachig</span>
+                            <span><i class="fas fa-signal"></i> 3 Schwierigkeitsstufen</span>
+                        </div>
+                        <button class="game-card-btn bonus-btn" data-game="world-capitals">
+                            <i class="fas fa-play"></i> Spielen
+                        </button>
+                    </div>
                 </div>
             </div>
 
             <!-- Difficulty Selection -->
-            <div class="selection-section" id="difficultySection" style="display: none;">
-                <h3>Wähle einen Schwierigkeitsgrad:</h3>
-                <div class="button-grid">
-                    <button class="difficulty-btn" data-difficulty="quiz">
-                        <i class="fas fa-clone"></i>
-                        <span>Quiz-Modus<br><small>4 Antwort-Optionen</small></span>
+            <div class="selection-section modern-difficulty" id="difficultySection" style="display: none;">
+                <div class="difficulty-header">
+                    <button class="back-btn" id="backToDifficultyBtn">
+                        <i class="fas fa-arrow-left"></i> Zurück
                     </button>
-                    <button class="difficulty-btn" data-difficulty="kombiniert" id="combinedBtn" style="display: none;">
-                        <i class="fas fa-edit"></i>
-                        <span>Kombiniert<br><small>Eingabe + Hilfe</small></span>
-                    </button>
-                    <button class="difficulty-btn" data-difficulty="profi">
-                        <i class="fas fa-keyboard"></i>
-                        <span>Profi-Modus<br><small>Freie Eingabe</small></span>
-                    </button>
+                    <h2 class="section-title">Wähle deinen Schwierigkeitsgrad</h2>
+                </div>
+                <div class="difficulty-grid">
+                    <div class="difficulty-card" data-difficulty="quiz">
+                        <div class="difficulty-icon easy">
+                            <i class="fas fa-clone"></i>
+                        </div>
+                        <h3>Quiz-Modus</h3>
+                        <p>4 Antwort-Optionen zur Auswahl</p>
+                        <ul class="difficulty-features">
+                            <li><i class="fas fa-check"></i> Multiple Choice</li>
+                            <li><i class="fas fa-check"></i> Einsteigerfreundlich</li>
+                            <li><i class="fas fa-check"></i> Tipps verfügbar</li>
+                        </ul>
+                        <button class="select-difficulty-btn" data-difficulty="quiz">
+                            Auswählen
+                        </button>
+                    </div>
+
+                    <div class="difficulty-card recommended" data-difficulty="kombiniert" id="combinedBtn" style="display: none;">
+                        <div class="difficulty-badge">Empfohlen</div>
+                        <div class="difficulty-icon medium">
+                            <i class="fas fa-edit"></i>
+                        </div>
+                        <h3>Kombiniert</h3>
+                        <p>Freie Eingabe mit Hilfe-Option</p>
+                        <ul class="difficulty-features">
+                            <li><i class="fas fa-check"></i> Freie Texteingabe</li>
+                            <li><i class="fas fa-check"></i> 4-Optionen-Hilfe (100P)</li>
+                            <li><i class="fas fa-check"></i> Perfekt zum Lernen</li>
+                        </ul>
+                        <button class="select-difficulty-btn" data-difficulty="kombiniert">
+                            Auswählen
+                        </button>
+                    </div>
+
+                    <div class="difficulty-card" data-difficulty="profi">
+                        <div class="difficulty-icon hard">
+                            <i class="fas fa-keyboard"></i>
+                        </div>
+                        <h3>Profi-Modus</h3>
+                        <p>Nur freie Eingabe, keine Hilfe</p>
+                        <ul class="difficulty-features">
+                            <li><i class="fas fa-check"></i> Freie Texteingabe</li>
+                            <li><i class="fas fa-check"></i> Herausfordernd</li>
+                            <li><i class="fas fa-check"></i> Maximale Punkte</li>
+                        </ul>
+                        <button class="select-difficulty-btn" data-difficulty="profi">
+                            Auswählen
+                        </button>
+                    </div>
                 </div>
             </div>
 
             <!-- Start Game Button -->
-            <div class="start-game-section" id="startGameSection">
-                <button class="start-btn" id="startBtn">
+            <div class="start-game-section" id="startGameSection" style="display: none;">
+                <button class="start-btn modern" id="startBtn">
                     <i class="fas fa-play"></i> Spiel starten
                 </button>
             </div>
