--- a/index.html
+++ b/index.html
@@ -50,21 +50,25 @@
             <!-- Hero Section -->
             <div class="hero-section">
                 <div class="hero-content">
-                    <div class="hero-flag">🇦🇹</div>
-                    <h1 class="hero-title">Österreich Quiz</h1>
-                    <p class="hero-subtitle">Teste dein Wissen über die Alpenrepublik</p>
+                    <div class="hero-top">
+                        <div class="hero-flag">🇦🇹</div>
+                        <div class="hero-text">
+                            <h1 class="hero-title">Österreich Quiz</h1>
+                            <p class="hero-subtitle">Teste dein Wissen</p>
+                        </div>
+                    </div>
                     <div class="hero-stats">
                         <div class="stat-item">
                             <i class="fas fa-trophy"></i>
-                            <span><strong id="heroTotalPoints">0</strong> Punkte</span>
+                            <span><strong id="heroTotalPoints">0</strong></span>
                         </div>
                         <div class="stat-item">
                             <i class="fas fa-gamepad"></i>
-                            <span><strong id="heroTotalGames">0</strong> Spiele</span>
+                            <span><strong id="heroTotalGames">0</strong></span>
                         </div>
                         <div class="stat-item">
                             <i class="fas fa-chart-line"></i>
-                            <span><strong id="heroWinRate">0%</strong> Erfolgsrate</span>
+                            <span><strong id="heroWinRate">0%</strong></span>
                         </div>
                     </div>
                 </div>
@@ -73,79 +77,76 @@
             <!-- Main Games Section -->
             <div class="games-section">
                 <h2 class="section-title">
-                    <i class="fas fa-map-location-dot"></i>
-                    Hauptspiele
+                    <i class="fas fa-play-circle"></i>
+                    Spiel wählen
                 </h2>
                 <div class="games-grid">
                     <!-- KFZ-Kennzeichen -->
                     <div class="game-card featured" data-game="license-plates">
                         <div class="game-card-badge">Beliebt</div>
-                        <div class="game-card-icon">
-                            <i class="fas fa-car"></i>
+                        <div class="game-card-row">
+                            <div class="game-card-icon">
+                                <i class="fas fa-car"></i>
+                            </div>
+                            <div class="game-card-info">
+                                <h3 class="game-card-title">KFZ-Kennzeichen</h3>
+                                <p class="game-card-description">93 Kennzeichen • 3 Modi</p>
+                            </div>
+                            <button class="game-card-btn-compact" data-game="license-plates">
+                                <i class="fas fa-play"></i>
+                            </button>
                         </div>
-                        <h3 class="game-card-title">KFZ-Kennzeichen</h3>
-                        <p class="game-card-description">Erkenne alle 93 österreichischen Kennzeichen der Bundesländer und Bezirke</p>
-                        <div class="game-card-stats">
-                            <span><i class="fas fa-map-marker-alt"></i> 93 Kennzeichen</span>
-                            <span><i class="fas fa-layer-group"></i> 3 Modi</span>
-                        </div>
-                        <button class="game-card-btn" data-game="license-plates">
-                            <i class="fas fa-play"></i> Spielen
-                        </button>
                     </div>
 
                     <!-- Hauptstädte Österreich -->
                     <div class="game-card featured" data-game="capitals">
                         <div class="game-card-badge">Neu</div>
-                        <div class="game-card-icon">
-                            <i class="fas fa-university"></i>
+                        <div class="game-card-row">
+                            <div class="game-card-icon">
+                                <i class="fas fa-university"></i>
+                            </div>
+                            <div class="game-card-info">
+                                <h3 class="game-card-title">Hauptstädte</h3>
+                                <p class="game-card-description">9 Bundesländer • Mit Wappen</p>
+                            </div>
+                            <button class="game-card-btn-compact" data-game="capitals">
+                                <i class="fas fa-play"></i>
+                            </button>
                         </div>
-                        <h3 class="game-card-title">Hauptstädte Österreich</h3>
-                        <p class="game-card-description">Teste dein Wissen über Landes- und Bezirkshauptstädte in ganz Österreich</p>
-                        <div class="game-card-stats">
-                            <span><i class="fas fa-city"></i> 9 Bundesländer</span>
-                            <span><i class="fas fa-shield-alt"></i> Mit Wappen</span>
-                        </div>
-                        <button class="game-card-btn" data-game="capitals">
-                            <i class="fas fa-play"></i> Spielen
-                        </button>
                     </div>
 
                     <!-- Wappen-Sammlung Teaser -->
-                    <div class="game-card info-card">
-                        <div class="game-card-icon secondary">
-                            <i class="fas fa-flag"></i>
+                    <a href="wappen.html" class="game-card info-card link-card">
+                        <div class="game-card-row">
+                            <div class="game-card-icon secondary">
+                                <i class="fas fa-flag"></i>
+                            </div>
+                            <div class="game-card-info">
+                                <h3 class="game-card-title">Wappen-Sammlung</h3>
+                                <p class="game-card-description">54 österreichische Wappen</p>
+                            </div>
+                            <span class="game-card-arrow">
+                                <i class="fas fa-chevron-right"></i>
+                            </span>
                         </div>
-                        <h3 class="game-card-title">Wappen-Sammlung</h3>
-                        <p class="game-card-description">Entdecke 54 österreichische Wappen von Bundesländern, Städten und Bezirken</p>
-                        <a href="wappen.html" class="game-card-btn secondary">
-                            <i class="fas fa-arrow-right"></i> Zur Sammlung
-                        </a>
-                    </div>
+                    </a>
                 </div>
             </div>
 
             <!-- Bonus Section -->
             <div class="bonus-section">
-                <h2 class="section-title">
-                    <i class="fas fa-globe"></i>
-                    Bonus: Welt-Quiz
-                </h2>
-                <div class="games-grid single">
-                    <div class="game-card bonus-card" data-game="world-capitals">
-                        <div class="game-card-badge bonus">Bonus</div>
+                <div class="game-card bonus-card" data-game="world-capitals">
+                    <div class="game-card-badge bonus">Bonus</div>
+                    <div class="game-card-row">
                         <div class="game-card-icon bonus">
                             <i class="fas fa-earth-americas"></i>
                         </div>
-                        <h3 class="game-card-title">Internationale Hauptstädte</h3>
-                        <p class="game-card-description">Erweitere deinen Horizont mit über 150 Hauptstädten aus aller Welt</p>
-                        <div class="game-card-stats">
-                            <span><i class="fas fa-globe-americas"></i> 150+ Städte</span>
-                            <span><i class="fas fa-language"></i> Mehrsprachig</span>
-                            <span><i class="fas fa-signal"></i> 3 Schwierigkeitsstufen</span>
+                        <div class="game-card-info">
+                            <h3 class="game-card-title">Welt-Hauptstädte</h3>
+                            <p class="game-card-description">150+ Städte weltweit</p>
                         </div>
-                        <button class="game-card-btn bonus-btn" data-game="world-capitals">
-                            <i class="fas fa-play"></i> Spielen
+                        <button class="game-card-btn-compact bonus-btn" data-game="world-capitals">
+                            <i class="fas fa-play"></i>
                         </button>
                     </div>
                 </div>
