--- a/settings.html
+++ b/settings.html
@@ -532,6 +532,22 @@
                 <span>Ansicht auf 100% zurücksetzen</span>
             </button>
             <p id="commitInfo">Version wird geladen...</p>
+            
+            <div class="footer-links">
+                <a href="entwickler.html" class="footer-link">
+                    <i class="fas fa-code"></i> Entwickler-Info
+                </a>
+                <a href="impressum.html" class="footer-link">
+                    <i class="fas fa-file-contract"></i> Impressum
+                </a>
+                <a href="https://github.com/ochtii/Spielesammlung" target="_blank" rel="noopener" class="footer-link">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+            </div>
+            
+            <div class="footer-copyright">
+                © 2026 Österreich Spielesammlung | Open Source unter MIT-Lizenz
+            </div>
         </div>
     </footer>
 
