✨ Timer-Funktion vollständig implementiert
- Timer pro Frage mit konfigurierbarer Dauer (5-120s)
- Visueller Timer-Modus mit animiertem Kreisfortschritt
- Moderne Glow-Effekte bei Warnung (gelb) und Gefahr (rot)
- Shake-Animation bei kritischer Zeit
- Toggle in Einstellungen für visuellen/einfachen Modus
- Zeitbonus bis zu +20 Punkte für schnelle Antworten
- Automatischer Submit bei Zeitablauf
- SVG-basierter Progress-Ring mit smooth Transition
- Responsive Design für mobile Geräte

--- a/help.html
+++ b/help.html
@@ -236,19 +236,23 @@
                     </div>
                     <div class="points-row points-excellent">
                         <span><i class="fas fa-star"></i> Ohne Tipp</span>
-                        <span class="points-value">100</span>
+                        <span class="points-value">100 <small>(+ bis zu 20 Zeitbonus)</small></span>
                     </div>
                     <div class="points-row points-good">
                         <span><i class="fas fa-lightbulb"></i> 1 Tipp</span>
-                        <span class="points-value">70</span>
+                        <span class="points-value">70 <small>(+ Zeitbonus)</small></span>
                     </div>
                     <div class="points-row points-ok">
                         <span><i class="fas fa-lightbulb"></i> 2 Tipps</span>
-                        <span class="points-value">40</span>
+                        <span class="points-value">40 <small>(+ Zeitbonus)</small></span>
                     </div>
                     <div class="points-row points-low">
                         <span><i class="fas fa-lightbulb"></i> 3 Tipps</span>
-                        <span class="points-value">10</span>
+                        <span class="points-value">10 <small>(+ Zeitbonus)</small></span>
+                    </div>
+                    <div class="points-row points-warning">
+                        <span><i class="fas fa-clock"></i> Zeit abgelaufen</span>
+                        <span class="points-value">0</span>
                     </div>
                     <div class="points-row points-wrong">
                         <span><i class="fas fa-times"></i> Falsche Antwort</span>
@@ -267,7 +271,13 @@
                 <div class="points-feature-card">
                     <i class="fas fa-shopping-cart"></i>
                     <h4>Kostenpflichtige Tipps</h4>
-                    <p>Optional: Aktiviere diese Funktion in den Einstellungen. Tipps kosten dann <strong>20 Punkte</strong> aus deinem Guthaben.</p>
+                    <p>Optional: Aktiviere diese Funktion in den Einstellungen. Tipps kosten dann Punkte aus deinem Guthaben (je nach Tipp 10-30 Punkte).</p>
+                </div>
+
+                <div class="points-feature-card">
+                    <i class="fas fa-clock"></i>
+                    <h4>Timer & Zeitbonus</h4>
+                    <p>Mit aktiviertem Timer kannst du bis zu <strong>+20 Bonuspunkte</strong> für schnelle Antworten verdienen! Je mehr Zeit übrig bleibt, desto mehr Bonus gibt es. Aktiviere den Timer in den <a href="settings.html">Einstellungen</a>.</p>
                 </div>
             </div>
         </section>
