--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
                     <span class="score-label">Punkte:</span>
                     <span class="score-value" id="scoreValue">0</span>
                 </div>
+                <div class="timer-display" id="timerDisplay" style="display: none;">
+                    <div class="timer-visual" id="timerVisual">
+                        <svg class="timer-ring" viewBox="0 0 100 100">
+                            <circle class="timer-ring-bg" cx="50" cy="50" r="45"></circle>
+                            <circle class="timer-ring-progress" id="timerRingProgress" cx="50" cy="50" r="45"></circle>
+                        </svg>
+                        <div class="timer-inner">
+                            <span class="timer-value" id="timerValue">30</span>
+                            <span class="timer-unit">s</span>
+                        </div>
+                    </div>
+                    <i class="fas fa-clock timer-icon-simple" id="timerIconSimple"></i>
+                </div>
                 <button class="restart-btn" id="restartBtn" title="Neustart">
                     <i class="fas fa-rotate-right"></i>
                 </button>
