Feature: Laser-Timer Animation, Mobile Hover Fix, Population ohne Modus-Auswahl
- Laser-Border Animation für visuellen Timer hinzugefügt
- Keine Hover-Effekte auf Touch-Geräten für Antwort-Buttons
- Einwohner-Raten startet direkt ohne Schwierigkeitsauswahl
- Laser schrumpft mit Timer und pulsiert bei Warnung/Gefahr

--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@
 
         <!-- Game Screen -->
         <div id="gameScreen" class="screen">
+            <!-- Laser Border Animation -->
+            <div class="laser-border" id="laserBorder">
+                <div class="laser-line laser-top"></div>
+                <div class="laser-line laser-right"></div>
+                <div class="laser-line laser-bottom"></div>
+                <div class="laser-line laser-left"></div>
+                <div class="laser-corner laser-corner-tl"></div>
+                <div class="laser-corner laser-corner-tr"></div>
+                <div class="laser-corner laser-corner-bl"></div>
+                <div class="laser-corner laser-corner-br"></div>
+            </div>
+            
             <div class="game-header">
                 <div class="score-display">
                     <span class="score-label">Punkte:</span>
