--- a/wappen.html
+++ b/wappen.html
@@ -109,9 +109,10 @@
             <a href="points.html" class="bottom-nav-item" data-nav="points">
                 <i class="fas fa-coins"></i>
                 <span>Punkte</span>
+                <span class="bottom-nav-badge" id="bottomNavPoints">0</span>
             </a>
             <a href="help.html" class="bottom-nav-item" data-nav="help">
-                <i class="fas fa-circle-info"></i>
+                <i class="fas fa-question-circle"></i>
                 <span>Hilfe</span>
             </a>
             <a href="faq.html" class="bottom-nav-item" data-nav="faq">
@@ -340,6 +341,21 @@
                 }
             });
         }
+
+        // Punkteanzeige in Bottom Nav aktualisieren
+        function updateBottomNavPoints() {
+            const pointsDisplay = document.getElementById('bottomNavPoints');
+            if (pointsDisplay) {
+                const pointsData = JSON.parse(localStorage.getItem('pointsData') || '{"totalPoints":0}');
+                const totalPoints = pointsData.totalPoints || 0;
+                pointsDisplay.textContent = totalPoints > 999 ? '999+' : totalPoints;
+            }
+        }
+
+        // Beim Laden aufrufen
+        document.addEventListener('DOMContentLoaded', () => {
+            updateBottomNavPoints();
+        });
     </script>
 </body>
 </html>
