--- a/faq.html
+++ b/faq.html
@@ -396,13 +396,14 @@
             <a href="points.html" class="bottom-nav-item" data-nav="points">
                 <i class="fas fa-coins"></i>
                 <span>Punkte</span>
+                <span class="bottom-nav-badge" id="bottomNavPoints">0</span>
             </a>
             <a href="help.html" class="bottom-nav-item" data-nav="help">
                 <i class="fas fa-question-circle"></i>
                 <span>Hilfe</span>
             </a>
             <a href="faq.html" class="bottom-nav-item current" data-nav="faq">
-                <i class="fas fa-comment-dots"></i>
+                <i class="fas fa-circle-question"></i>
                 <span>FAQ</span>
             </a>
             <a href="settings.html" class="bottom-nav-item" data-nav="settings">
@@ -467,7 +468,18 @@
             });
         }
         
+        // Punkteanzeige in Bottom Nav aktualisieren
+        function updateBottomNavPoints() {
+            const pointsDisplay = document.getElementById('bottomNavPoints');
+            if (pointsDisplay) {
+                const pointsData = JSON.parse(localStorage.getItem('pointsData') || '{"totalPoints":0}');
+                const totalPoints = pointsData.totalPoints || 0;
+                pointsDisplay.textContent = totalPoints > 999 ? '999+' : totalPoints;
+            }
+        }
+        
         applyBottomNavSettings();
+        updateBottomNavPoints();
 
         // FAQ Accordion
         document.querySelectorAll('.faq-question').forEach(button => {
