--- a/help.html
+++ b/help.html
@@ -371,6 +371,7 @@
             <a href="points.html" class="bottom-nav-item" data-nav="points">
                 <i class="fas fa-coins"></i>
                 <span>Punkte</span>
+                <span class="bottom-nav-badge" id="bottomNavPoints">0</span>
             </a>
             <a href="help.html" class="bottom-nav-item current" data-nav="help">
                 <i class="fas fa-question-circle"></i>
@@ -437,7 +438,18 @@
             });
         }
         
+        // Punkteanzeige in Bottom Nav aktualisieren
+        function updateBottomNavPoints() {
+            const pointsDisplay = document.getElementById('bottomNavPoints');
+            if (pointsDisplay) {
+                const pointsData = JSON.parse(localStorage.getItem('pointsData') || '{"totalPoints":0}');
+                const totalPoints = pointsData.totalPoints || 0;
+                pointsDisplay.textContent = totalPoints > 999 ? '999+' : totalPoints;
+            }
+        }
+        
         applyBottomNavSettings();
+        updateBottomNavPoints();
 
         // Menu Toggle
         const menuToggle = document.getElementById('menuToggle');
