6 Easter Eggs: 3 neue hinzugefügt (Logo Fan, Footer Finder, Jackpot) - App-weit verteilt

--- a/settings.html
+++ b/settings.html
@@ -63,7 +63,7 @@
                     <div class="easter-eggs-count">
                         <span id="foundEasterEggsCount">0</span>
                         <span class="easter-eggs-divider">/</span>
-                        <span id="totalEasterEggsCount">3</span>
+                        <span id="totalEasterEggsCount">6</span>
                     </div>
                 </div>
                 <div class="easter-eggs-progress">
@@ -85,10 +85,25 @@
                         <span class="egg-name">???</span>
                         <span class="egg-reward">+250 <i class="fas fa-coins"></i></span>
                     </div>
+                    <div class="easter-egg-item" id="eggItem4" data-egg="logoTap">
+                        <i class="fas fa-question egg-icon"></i>
+                        <span class="egg-name">???</span>
+                        <span class="egg-reward">+300 <i class="fas fa-coins"></i></span>
+                    </div>
+                    <div class="easter-egg-item" id="eggItem5" data-egg="footerSecret">
+                        <i class="fas fa-question egg-icon"></i>
+                        <span class="egg-name">???</span>
+                        <span class="egg-reward">+200 <i class="fas fa-coins"></i></span>
+                    </div>
+                    <div class="easter-egg-item" id="eggItem6" data-egg="pointsJackpot">
+                        <i class="fas fa-question egg-icon"></i>
+                        <span class="egg-name">???</span>
+                        <span class="egg-reward">+777 <i class="fas fa-coins"></i></span>
+                    </div>
                 </div>
                 <div class="easter-eggs-hint-mobile">
                     <i class="fas fa-mobile-alt"></i>
-                    <span>Tipp: Auf dem Handy kannst du Swipe-Gesten und Tipp-Sequenzen verwenden!</span>
+                    <span>Tipp: Easter Eggs sind überall in der App versteckt. Tippe auf verschiedene Elemente!</span>
                 </div>
             </div>
 
@@ -1644,6 +1659,27 @@
                 icon: 'fas fa-keyboard',
                 reward: 250,
                 description: '"austria" tippen oder 7x auf das 🥚 Icon tippen'
+            },
+            logoTap: {
+                id: 'logoTap',
+                name: 'Logo Fan',
+                icon: 'fas fa-map-location-dot',
+                reward: 300,
+                description: '10x auf das AUT Quiz Logo tippen'
+            },
+            footerSecret: {
+                id: 'footerSecret',
+                name: 'Footer Finder',
+                icon: 'fas fa-shoe-prints',
+                reward: 200,
+                description: '5x auf das Copyright im Footer tippen'
+            },
+            pointsJackpot: {
+                id: 'pointsJackpot',
+                name: 'Jackpot!',
+                icon: 'fas fa-trophy',
+                reward: 777,
+                description: '7x auf das Münzen-Icon auf der Punkte-Seite tippen'
             }
         };
         
