refactor: Modularize CSS - split style.css into separate module files
- Created css/ directory with modular CSS files:
  - variables.css: Theme variables and dark mode colors
  - base.css: Global styles, container, cards, footer
  - navbar.css: Navigation and menu styles
  - components.css: Buttons, modals, answer buttons
  - settings.css: Settings page and accordion system
  - game.css: Game screen, timer, hints, license plates
  - points.css: Points page, achievements, history
  - pages.css: Help, FAQ, Wappen, Impressum, Entwickler
  - easter-eggs.css: Easter egg system styles
  - dev-tools.css: Developer tools and storage modals
  - utilities.css: Animations, helper classes, responsive utils
  - main.css: Central import file for all modules

- Updated all HTML files to use new modular CSS (css/main.css)
- Removed inline styles from help.html (replaced with CSS classes)
- Removed inline styles from points.html (replaced with CSS classes)
- Added helper icon classes for dynamic content

--- a/help.html
+++ b/help.html
@@ -11,8 +11,8 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css?v=20260108c">
+    <!-- Modular Stylesheets -->
+    <link rel="stylesheet" href="css/main.css?v=20260109">
 </head>
 <body>
     <!-- Navbar -->
@@ -83,7 +83,7 @@
             
             <div class="help-grid">
                 <div class="help-card">
-                    <div class="help-card-icon" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                    <div class="help-card-icon icon-purple">
                         <i class="fas fa-car"></i>
                     </div>
                     <h3>Kennzeichen raten</h3>
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="help-card">
-                    <div class="help-card-icon" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                    <div class="help-card-icon icon-pink">
                         <i class="fas fa-university"></i>
                     </div>
                     <h3>Hauptstädte Quiz</h3>
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="help-card">
-                    <div class="help-card-icon" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);">
+                    <div class="help-card-icon icon-blue">
                         <i class="fas fa-globe-europe"></i>
                     </div>
                     <h3>Welthauptstädte</h3>
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="help-card">
-                    <div class="help-card-icon" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
+                    <div class="help-card-icon icon-orange">
                         <i class="fas fa-users"></i>
                     </div>
                     <h3>Einwohner-Vergleich</h3>
