--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css?v=20260108c">
+    <!-- Modular Stylesheets -->
+    <link rel="stylesheet" href="css/main.css?v=20260109">
 </head>
 <body>
     <!-- Navbar -->
