--- a/points.html
+++ b/points.html
@@ -11,8 +11,8 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css?v=20260108c">
+    <!-- Modular Stylesheets -->
+    <link rel="stylesheet" href="css/main.css?v=20260109">
 </head>
 <body>
     <nav class="navbar">
@@ -630,8 +630,8 @@
 
             if (isEarned) {
                 const statusIcon = entry.isCorrect ? 
-                    '<i class="fas fa-check-circle" style="color: var(--success-color);"></i>' :
-                    '<i class="fas fa-times-circle" style="color: var(--error-color);"></i>';
+                    '<i class="fas fa-check-circle detail-icon-success"></i>' :
+                    '<i class="fas fa-times-circle detail-icon-error"></i>';
                 
                 headerContent = `
                     ${statusIcon}
@@ -686,7 +686,7 @@
                 };
 
                 headerContent = `
-                    <i class="fas fa-lightbulb" style="color: var(--warning-color);"></i>
+                    <i class="fas fa-lightbulb detail-icon-warning"></i>
                     <h3>Tipp verwendet</h3>
                 `;
 
@@ -694,7 +694,7 @@
                     <div class="detail-section">
                         <strong>Tipp-Typ</strong>
                         <p><strong>${hintNames[entry.hintType] || entry.hintType}</strong></p>
-                        <p style="font-size: 0.9rem; color: var(--text-secondary); margin-top: 0.25rem;">
+                        <p class="detail-hint-description">
                             ${hintDescriptions[entry.hintType] || ''}
                         </p>
                     </div>
